Fix delete button that renders outside container on mobile display.

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,7 @@ form {
       0,
       1fr
     );
-  grid-gap: 20px;
+  grid-gap: 10px;
   border: 2px solid #d3d3d3;
   box-shadow: 5px 5px 5px #f5f5f5;
   padding: 10px 5px;
